iptables/rules.v4
*filter

# all traffic from machine
-A OUTPUT -j ACCEPT

# permit tcp ports 25,80,443,587,993,22345
-A INPUT -p tcp -m multiport --dports 25,80,443,587,993,22345 -j ACCEPT

# permit udp/tcp ports 53 from everywhere
-A INPUT -p tcp --dport 53 -j ACCEPT
-A INPUT -p udp --dport 53 -j ACCEPT

# ping ipv4
-A INPUT -p icmp -j ACCEPT

# subnets
# permit everything
-A INPUT -s 10.0.0.0/8 -j ACCEPT
-A INPUT -s 192.168.255.0/24 -j ACCEPT
-A INPUT -s 172.16.0.0/16 -j ACCEPT

# yoda leia
# permit everything
-A INPUT -s 193.191.177.12 -j ACCEPT
-A INPUT -s 193.191.177.1 -j ACCEPT

# drop all other traffic
-A INPUT -j DROP

COMMIT
